; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-bufio.c___cleanup_old_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-bufio.c___cleanup_old_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_buffer = type { i64, i64, i32 }

@jiffies = common dso_local global i64 0, align 8
@__GFP_IO = common dso_local global i32 0, align 4
@B_READING = common dso_local global i32 0, align 4
@B_WRITING = common dso_local global i32 0, align 4
@B_DIRTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_buffer*, i32, i64)* @__cleanup_old_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__cleanup_old_buffer(%struct.dm_buffer* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.dm_buffer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.dm_buffer* %0, %struct.dm_buffer** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* @jiffies, align 8
  %9 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %10 = getelementptr inbounds %struct.dm_buffer, %struct.dm_buffer* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = sub i64 %8, %11
  %13 = load i64, i64* %7, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %54

16:                                               ; preds = %3
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @__GFP_IO, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %41, label %21

21:                                               ; preds = %16
  %22 = load i32, i32* @B_READING, align 4
  %23 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %24 = getelementptr inbounds %struct.dm_buffer, %struct.dm_buffer* %23, i32 0, i32 2
  %25 = call i64 @test_bit(i32 %22, i32* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %39, label %27

27:                                               ; preds = %21
  %28 = load i32, i32* @B_WRITING, align 4
  %29 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %30 = getelementptr inbounds %struct.dm_buffer, %struct.dm_buffer* %29, i32 0, i32 2
  %31 = call i64 @test_bit(i32 %28, i32* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %39, label %33

33:                                               ; preds = %27
  %34 = load i32, i32* @B_DIRTY, align 4
  %35 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %36 = getelementptr inbounds %struct.dm_buffer, %struct.dm_buffer* %35, i32 0, i32 2
  %37 = call i64 @test_bit(i32 %34, i32* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %33, %27, %21
  store i32 1, i32* %4, align 4
  br label %54

40:                                               ; preds = %33
  br label %41

41:                                               ; preds = %40, %16
  %42 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %43 = getelementptr inbounds %struct.dm_buffer, %struct.dm_buffer* %42, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %41
  store i32 1, i32* %4, align 4
  br label %54

47:                                               ; preds = %41
  %48 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %49 = call i32 @__make_buffer_clean(%struct.dm_buffer* %48)
  %50 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %51 = call i32 @__unlink_buffer(%struct.dm_buffer* %50)
  %52 = load %struct.dm_buffer*, %struct.dm_buffer** %5, align 8
  %53 = call i32 @__free_buffer_wake(%struct.dm_buffer* %52)
  store i32 0, i32* %4, align 4
  br label %54

54:                                               ; preds = %47, %46, %39, %15
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @__make_buffer_clean(%struct.dm_buffer*) #1

declare dso_local i32 @__unlink_buffer(%struct.dm_buffer*) #1

declare dso_local i32 @__free_buffer_wake(%struct.dm_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
